# lucupy

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: cd.yml  ci.yml  docs.yml
docs/: HELPERS.rst  MINIMODEL.rst  OBSERVATORY.rst  SKY.rst  TIMEUTILS.rst  automate.py  gen_ref_pages.py
docs/SUMMARY/: index.html
docs/lucupy/: index.html
docs/lucupy/decorators/: index.html
docs/lucupy/helpers/: index.html
docs/lucupy/minimodel/: index.html
docs/lucupy/minimodel/atom/: index.html
docs/lucupy/minimodel/constraints/: index.html
docs/lucupy/minimodel/group/: index.html
docs/lucupy/minimodel/magnitude/: index.html
docs/lucupy/minimodel/observation/: index.html
docs/lucupy/minimodel/observationmode/: index.html
docs/lucupy/minimodel/program/: index.html
docs/lucupy/minimodel/qastate/: index.html
docs/lucupy/minimodel/resource/: index.html
docs/lucupy/minimodel/semester/: index.html
docs/lucupy/minimodel/site/: index.html
docs/lucupy/minimodel/timeallocation/: index.html
docs/lucupy/minimodel/timingwindow/: index.html
docs/lucupy/minimodel/too/: index.html
docs/lucupy/observatory/: index.html
docs/lucupy/observatory/abstract/: index.html
docs/lucupy/observatory/gemini/: index.html
docs/lucupy/observatory/gemini/geminiobservation/: index.html
docs/lucupy/observatory/gemini/geminiproperties/: index.html
docs/lucupy/sky/: index.html
docs/lucupy/sky/altitude/: index.html
docs/lucupy/sky/brightness/: index.html
docs/lucupy/sky/constants/: index.html
docs/lucupy/sky/events/: index.html
docs/lucupy/sky/moon/: index.html
docs/lucupy/sky/sun/: index.html
docs/lucupy/sky/utils/: index.html
docs/lucupy/timeutils/: index.html
docs/lucupy/types/: index.html
lucupy/: __init__.py
lucupy/client/: README.md  __init__.py  client.py  example.ipynb
lucupy/client/managers/: manager.py
lucupy/client/managers/program_note/: __init__.py  manager.py  queries.py
lucupy/client/mixins/: README.md  __init__.py  create.py  delete.py  get.py  restore.py  update.py  utils.py
lucupy/decorators/: __init__.py
lucupy/helpers/: __init__.py
lucupy/instruments/: __init__.py  instruments.py
lucupy/meta/: __init__.py
lucupy/minimodel/: __init__.py  atom.py  constraints.py  group.py  ids.py  magnitude.py  obs_filter.py  observation.py  observationmode.py  program.py  qastate.py  resource.py  resource_type.py  semester.py  site.py  target.py  timeallocation.py  timingwindow.py  too.py  wavelength.py
lucupy/observatory/: __init__.py
lucupy/observatory/abstract/: __init__.py
lucupy/observatory/gemini/: __init__.py  geminiobservation.py  geminiproperties.py
lucupy/odb/: __init__.py  blueprint.py  lucuma.py
lucupy/output/: __init__.py
lucupy/plot/: __init__.py
lucupy/provider/: __init__.py  converter.py  provider.py
lucupy/resource_manager/: __init__.py  resource_manager.py
lucupy/resourcemanager/: resource_manager.py
lucupy/sky/: __init__.py  altitude.py  brightness.py  constants.py  events.py  moon.py  sun.py  utils.py
lucupy/timeutils/: __init__.py
lucupy/types/: __init__.py
scripts/: automate.py
search/: search_index.json
tests/: fixtures.py  test_altitude.py  test_barcode_helpers.py  test_brightness.py  test_events.py  test_group.py  test_helpers.py  test_immutable.py  test_lucupy.py  test_minimodel.py  test_moon.py  test_output.py  test_sun.py  test_utils.py
