[tool.poetry]
name = "lucupy"
version = "0.1.1"
description = "A striped down version of the lucuma core in Python for Schedule"
authors = ["Sergio Troncoso <sergio.troncoso@noirlab.edu>", 
           "Sebastian Raaphorst <sebastian.raaphorst@noirlab.edu>",
           "Bryan Miller <bryan.miller@noirlab.edu"]
readme = "README.rst"
homepage = "https://github.com/stroncod/lucupy"
repository = "https://github.com/stroncod/lucupy"
keywords = ["lucuma", "scheudule", "gpp"]
classifiers = [
   "Environment :: Web Environment",
   "Framework :: Hypothesis",
   "Framework :: Pytest",
   "Intended Audience :: Science/Research",
   "Programming Language :: Python :: 3.10",
   "Topic :: Scientific/Engineering :: Astronomy",
   "Topic :: Utilities",
]


[tool.poetry.dependencies]
python = "^3.10"
astropy = "^5.1"
pytz = "^2022.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
hypothesis = "^6.54.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
