[tool.poetry]
name = "lucupy"
version = "0.1.3"
description = "Lucuma core package for the Gemini Automated Scheduler at: https://github.com/gemini-hlsw/scheduler"
authors = ["Sergio Troncoso <sergio.troncoso@noirlab.edu>",
           "Sebastian Raaphorst <sebastian.raaphorst@noirlab.edu>",
           "Bryan Miller <bryan.miller@noirlab.edu"]
readme = "README.rst"
homepage = "https://github.com/gemini-hlsw/lucupy"
repository = "https://github.com/gemini-hlsw/lucupy"
keywords = ["lucuma", "scheudule", "gpp"]
classifiers = [
   "Environment :: Web Environment",
   "Framework :: Hypothesis",
   "Framework :: Pytest",
   "Intended Audience :: Science/Research",
   "Programming Language :: Python :: 3.10",
   "Topic :: Scientific/Engineering :: Astronomy",
   "Topic :: Utilities",
]

[tool.poetry.group.docs]

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.0"
mkdocs-material = "^8.5.6"
mkdocs-minify-plugin = "^0.5.0"
mkdocs-enumerate-headings-plugin = "^0.5.0"
mkdocs-awesome-pages-plugin = "^2.8.0"
mkdocs-img2fig-plugin = "^0.9.3"
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.5.0"
mkdocs-section-index = "^0.3.4"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}


[tool.poetry.dependencies]
python = "^3.10"
astropy = "^5.1"
pytz = "^2022.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
hypothesis = "6.54.2"
pre-commit = "^2.20.0"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
